fix breadcrumbs overlapping

--- a/themes/grav-theme-howto/css/media-queries.css
+++ b/themes/grav-theme-howto/css/media-queries.css
@@ -41,7 +41,7 @@
    height: 1rem;
    line-height: 1.2rem;
    padding-left: 1rem;
-   margin-bottom: 1rem;
+   height: auto;
  }
 
  #breadcrumbs span {
